# hoard

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  entrypoint.sh
.gitea/workflows/: build.yml
src/: config.rs  db.rs  lib.rs  main.rs
src/soundcloud/: mod.rs
src/youtube/: mod.rs
src/yt_dlp/: config.rs  mod.rs
