[package]
name = "hoard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
env_logger = "0.11.3"
log = "0.4.21"
rusqlite = "0.30.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.10"
